# vidl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp  test.py  vidl.py
.github/workflows/: ci.yml
tests/: test.cpp
